manifests/private-object-store-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: private-object-store
  namespace: bd-g08
spec:
  podSelector:
    matchLabels:
      app: objects
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: s3
      ports:
        - protocol: TCP
          port: 8333
